# mcarray

./: .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
cmake/: FindDSPONE.cmake  FindSNDFILE.cmake  FindWIPP.cmake
doc/: mcarray.dox
include/mcarray/: ArrayDescription.h  ArrayModules.h  Beamformer.h  BeamformingSeparationAndLocalistaion.h  BinauralLocalisation.h  BinauralMaskingImpl.h  FastBinauralMasking.h  MultibandBinarualLocalisation.h  SoundLocalisationCallback.h  SoundLocalisationImpl.h  SourceLocalisation.h  SourceSeparationAndLocalisation.h  SteeringBeamforming.h  _MCAException.h  complex.h  mcadefs.h  mcalogger.h  mcaloggerImpl.h  mcarray_exception.h  micarray.h  microhponeArrayHelpers.h
src/mcarray/: ArrayDescription.cpp  ArrayModules.cpp  Beamformer.cpp  BeamformingSeparationAndLocalisation.cpp  BinauralLocalisation.cpp  BinauralMaskingImpl.cpp  FastBinauralMasking.cpp  MCAException.cpp  MultibandBinarualLocalisation.cpp  SoundLocalisationCallback.cpp  SoundLocalisationImpl.cpp  SoundLocalisationParticleFilter.cpp  SoundLocalisationParticleFilter.h  SourceLocalisation.cpp  SourceSeparationAndLocalisation.cpp  SteeringBeamforming.cpp  mcalogger.cpp  mcarray_exception.cpp  microhponeArrayHelpers.cpp
src/programs/: mcabeamf.cpp
test/: test_mcarray.cpp
